--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nodeserver
-        image: kartiksuthar811/test
+        image: kartiksuthar811/test:latest
         ports:
         - containerPort: 3000
         
